testnet-validator-sg-template.yaml
# TESTNET EC2 SECURITY GROUP  

# This CF template must be launched BEFORE testnet-validator-ec2-template.yaml 
# in each REGION you intend to run a validator

#------------------------------------------------------------------------------
Parameters:
#------------------------------------------------------------------------------
  SecurityGroupIngressCIDR:
    Description: The IP address range that can be used to communicate to the 
      EC2 instances over SSH
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
#------------------------------------------------------------------------------
Resources:
#------------------------------------------------------------------------------
  ValidatorSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Suggested Security Group configurations for running 
        Helium Validator
      SecurityGroupIngress:
      - CidrIp: !Ref SecurityGroupIngressCIDR
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
        Description: SSH - Home IP
      - CidrIp: 0.0.0.0/0
        FromPort: 2154
        IpProtocol: tcp
        ToPort: 2154
        Description: Validator comms
#------------------------------------------------------------------------------
Outputs:
#------------------------------------------------------------------------------
  ValidatorSecurityGroupId:
    Description: Validator Security Group ID
    Value: !GetAtt ValidatorSecurityGroup.GroupId
    Export:
      Name: ValidatorSecurityGroupId
